# INFT2053-C-for-programmerere

task_1/: CMakeLists.txt  task_a.cpp  task_b.cpp
task_2/: CMakeLists.txt
task_2/task1and2/: task_1_and_2.cpp
task_2/task4/: task_4.cpp
task_2/task5/: task_5.cpp
task_2/task6/: task_6.cpp
task_3/: CMakeLists.txt  Circle.cpp  Circle.h  Commodity.cpp  Commodity.h  task_1_and_2.cpp  task_3.cpp  task_4.cpp
task_4/: CMakeLists.txt  task_1.cpp  task_2.cpp
task_5/: CMakeLists.txt  main.cpp
task_6/: CMakeLists.txt  task_1.cpp  task_2.cpp
task_7/: CMakeLists.txt  fraction.cpp  fraction.hpp  set.cpp  set.hpp  task_1.cpp  task_2.cpp
task_8/: CMakeLists.txt  task_1.cpp  task_2.cpp
task_9/: CMakeLists.txt  task_1.cpp
